bug:layout issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,8 @@ code {
 
   top: 0;
   left: -500px;
-  top: 60px;
-  height: 110%;
-
+  top: -30px;
+height: 110%;
 }
 
 
